[gd_scene load_steps=6 format=2]

[ext_resource path="res://sourcecode/fondos_edu/juanmeme.jpg" type="Texture" id=1]
[ext_resource path="res://sourcecode/Actors/Ambient/juan.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/joanAuditivo.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "tapapantalla"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.2, 0, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 0.34151, 1.7411 ),
"update": 0,
"values": [ Vector2( 0.106667, 0.100794 ), Vector2( 0.106667, 0.100794 ), Vector2( 4, 4 ), Vector2( 0.054, 0.054 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1.1, 1.5, 2, 2.3, 2.5, 3, 3.3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 10 ), Vector2( 12, 15 ), Vector2( 19, -23 ), Vector2( 10, -20 ), Vector2( -20, 22 ), Vector2( 0, 0 ), Vector2( 20, 50 ), Vector2( 10, 30 ), Vector2( 10, 25 ), Vector2( 22, 10 ), Vector2( -22, 22 ) ]
}

[node name="juan" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.106667, 0.100794 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.7

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/tapapantalla = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
